# mhdb-wilds-data

./: .gitignore  README.md  RESEARCH.md  config.toml  extract-paks.bat  extract.bat  get-rsz.py  merge.bat  rszmhwilds.json.version
.github/: FUNDING.yml
output/: .gitignore
output/merged/: Accessory.json  Amulet.json  Armor.json  ArmorUpgrade.json  Charm.json  Item.json  LargeMonsters.json  SetBonus.json  Skill.json  Stage.json  WeaponSeries.json
tools/: README.md
tools/DotUserReader/: DotUserExtractor.sln  DotUserReader.csproj  Program.cs
tools/REMSG_Converter/: .version  csv+msg2msg.bat  json+msg2msg.bat  msg2csv.bat  msg2json.bat  msg2txt.bat  txt+msg2msg.bat
tools/REtool/: .gitignore  Extract-PAK.bat  MHWs.list.version  MHWs.source.list.version  change-log.txt  filter_list.py  readme.txt
tools/RszTool/: .version
tools/extractor/: Cargo.toml
tools/finder/: .gitignore  Cargo.toml
tools/finder/src/: cli.rs  main.rs
tools/merger/: Cargo.toml
tools/merger/examples/: config.toml
tools/merger/src/: cli.rs  config.rs  main.rs  serde.rs
tools/merger/src/placeholders/: listener.rs  mod.rs  reference.rs
tools/merger/src/processor/: accessories.rs  amulets.rs  armor.rs  charms.rs  foundry.rs  items.rs  locations.rs  mod.rs  monsters.rs  skills.rs
tools/merger/src/processor/monsters/: mod.rs
tools/merger/src/processor/monsters/large/: effectives.rs  identifiers.rs  locations.rs  mod.rs  parts.rs  rewards.rs  size.rs
tools/merger/src/processor/weapons/: bow.rs  charge_blade.rs  dual_blades.rs  great_sword.rs  gunlance.rs  hammer.rs  heavy_bowgun.rs  hunting_horn.rs  insect_glaive.rs  lance.rs  light_bowgun.rs  long_sword.rs  mod.rs  series.rs  switch_axe.rs  sword_shield.rs
tools/parser/: Cargo.toml
tools/parser/src/: layout.rs  lib.rs  serde.rs
tools/parser/src/rsz/: content.rs  mod.rs  user.rs
tools/parser/src/types/: vec3.rs
(+39 files in other folders)
