[package]
name = "finder"
version = "0.1.0"
edition = "2024"

[dependencies]
rslib = { path = "../rslib" }
clap = { version = "4.5.31", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
wax = "0.6.0"
anyhow = "1.0.97"
regex = "1.11.1"
rayon = "1.10.0"
