[package]
name = "merger"
version = "0.1.0"
edition = "2024"

[dependencies]
rslib = { path = "../rslib" }
clap = { version = "4.5.31", features = ["derive"] }
console = "0.15.11"
indicatif = "0.17.11"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = { version = "1.0.139", features = ["preserve_order"] }
serde_repr = "0.1.19"
serde_with = "3.12.0"
thiserror = "2.0.11"
derive_more = { version = "2.0.1", features = ["unwrap", "deref"] }
rayon = "1.10.0"
strum = { version = "0.27.1", features = ["derive"] }
anyhow = "1.0.97"
