[package]
name = "parser"
version = "0.1.0"
edition = "2024"

[dependencies]
assert_matches = "1.5.0"
half = { version = "2.6.0", features = ["zerocopy", "serde"] }
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
uuid = { version = "1.18", features = ["serde"] }
zerocopy = { version = "0.8.27", features = ["derive"] }
log = "0.4"
strum = "0.27"
strum_macros = "0.27"
